# risk-analysis

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/risk_analysis/: risk_calculator.py
src/risk_analysis/schemas/: personal_information_schema.py
src/risk_analysis_api/: risk_analysis_constants.py  risk_analysis_controller.py  risk_analysys_service.py  risk_calculator.py
src/risk_analysis_api/schemas/: risk_score.py
test/: test_main.py  test_risk_analysis_api.py  test_risk_calculator.py
